--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,37 @@ body {
   flex-grow: 1;
 }
 
+.icon-circle {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(9, 57, 28, 0.1);
+  /* Adjust the transparency as needed */
+}
+
+.bg-custom {
+  background-size: 43%;
+  background-position: right bottom !important;
+}
+    .nav-space {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+@media (max-width: 992px) {
+  .nav-space {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .nav-button {
+    display: none !important;
+  }
+}
+
 @media (max-width: 768px) {
   .responsive-width {
     width: 100% !important;
@@ -21,5 +52,17 @@ body {
   .mobile-button {
     margin-top: 20px !important;
     margin-bottom: 10px !important;
+  }
+
+  .bg-custom {
+    background-size: 70%;
+    background-position: center bottom !important;
+  }
+}
+
+@media (max-width: 576px) {
+  .bg-custom {
+    background-size: 100%;
+    background-position: right 75% bottom 35% !important;
   }
 }
