--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,18 @@
 html,
 body {
   height: 100%;
+  font-family: "Ubuntu", serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+button {
+  font-family: "Ubuntu", serif;
 }
 
 .container-fluid {
